The filtering of products / variations is improved: Bug, documentation and test.
